--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #8519c9; }
+  background: #560dc0; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #e6955f; }
+  background: #2b3221; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #9593d1; }
+  background: #f94e27; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #193053; }
+  background: #0bf3b6; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #7a1104; }
+  background: #c2923f; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #ac81da; }
+  background: #1b2012; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #93164b; }
+  background: #59a301; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #c47947; }
+  background: #ebf94c; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #e37e8b; }
+  background: #ed49bc; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #3f0be6; }
+  background: #575c84; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #d7b184; }
+  background: #c28518; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #4a97a3; }
+  background: #062990; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #56a849; }
+  background: #4775ff; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #0d7a6f; }
+  background: #8b91a8; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #b36267; }
+  background: #2b1570; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #0e5b12; }
+  background: #caded6; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #db7da5; }
+  background: #5fb7c5; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #c1edf9; }
+  background: #7c1e42; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #b91d76; }
+  background: #0a7706; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #f72042; }
+  background: #7e175b; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #dda171; }
+  background: #e1cfac; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #8b44b2; }
+  background: #aa596b; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #e1a264; }
+  background: #3851cf; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #4631a7; }
+  background: #970bca; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #c755d8; }
+  background: #19be08; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #24e5ac; }
+  background: #e1551a; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #781742; }
+  background: #2297dd; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #c906dc; }
+  background: #d068d6; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #2cb2cd; }
+  background: #01f5d3; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #d83ea1; }
+  background: #baed0d; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #e442b1; }
+  background: #8bc8fd; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #2eb569; }
+  background: #2ac7aa; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #e3de77; }
+  background: #d1b956; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #fb2eda; }
+  background: #994745; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #44730c; }
+  background: #0aeb04; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #257229; }
+  background: #ed8413; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #a1aee4; }
+  background: #a10408; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #f11d26; }
+  background: #03edae; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #2f85ad; }
+  background: #7afaef; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #477792; }
+  background: #bd3f6c; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #f42209; }
+  background: #e3f61c; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #fab8dc; }
+  background: #0aacbd; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #4210f4; }
+  background: #705a79; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #5071bc; }
+  background: #62c07b; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #45a82d; }
+  background: #9a2d20; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #dfde04; }
+  background: #bd8fb7; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #c115f3; }
+  background: #379294; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #740585; }
+  background: #7b713a; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #71918d; }
+  background: #e00510; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #4b2b30; }
+  background: #36d297; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #a23454; }
+  background: #2c5201; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #4752c6; }
+  background: #6b35d2; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #4d72d3; }
+  background: #1aecbb; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #545f99; }
+  background: #8007cd; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #934580; }
+  background: #615d94; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #eff844; }
+  background: #c527a2; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #3f0cca; }
+  background: #dddf4f; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #51b7b0; }
+  background: #b29848; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #a7c38f; }
+  background: #b45943; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #593b42; }
+  background: #ac96f2; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #4cb414; }
+  background: #84f463; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #92f6ac; }
+  background: #a0f9e9; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #fa36df; }
+  background: #701b10; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #7e6666; }
+  background: #dfff3e; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #ab4d88; }
+  background: #1adda5; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #aa7610; }
+  background: #ac4fae; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #a01001; }
+  background: #570787; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #8070c9; }
+  background: #248edd; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #b215b5; }
+  background: #ee8fa7; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #196f20; }
+  background: #b854e3; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #0cc14f; }
+  background: #d0edca; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #9988f3; }
+  background: #737742; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #86fa91; }
+  background: #551ffc; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #0f9476; }
+  background: #e7f19c; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #c4a0d8; }
+  background: #028c80; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #238482; }
+  background: #648017; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #9941a5; }
+  background: #7e3ac6; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #24f1db; }
+  background: #f2748b; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #bf2e24; }
+  background: #eb9f57; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #6a20f7; }
+  background: #8f1371; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #235461; }
+  background: #50e43a; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #571b07; }
+  background: #61a7fa; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #0c6add; }
+  background: #1c160c; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #1a4719; }
+  background: #535877; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #5dc05b; }
+  background: #817a5d; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #5840b2; }
+  background: #f2f4dc; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #a6909d; }
+  background: #014fe3; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #49f481; }
+  background: #0f08d2; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #7e1d8e; }
+  background: #340a72; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #97d508; }
+  background: #79ef99; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #478e64; }
+  background: #e8dec6; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #9645f1; }
+  background: #397182; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #2761a5; }
+  background: #ec6a83; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #9daf0a; }
+  background: #3ddfe6; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #828c63; }
+  background: #539836; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #df651a; }
+  background: #1c6cd8; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #5770c2; }
+  background: #819fb1; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #99c3c6; }
+  background: #4f61c9; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #125304; }
+  background: #3adabb; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #89d4b2; }
+  background: #e677d5; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16852,6 +16852,10 @@ input:not(:checked) + .slider-switch > .switch-non {
     color: #4c4c4c;
     font-size: 20px;
     padding: 0px 14px; }
+
+/*waring modal css*/
+.waring-modal-wrapper h1 {
+  font-size: 20px; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
