--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -4983,3 +4983,9 @@ height: 300px;
   padding: 0px 14px;
   }
 }
+/*waring modal css*/
+.waring-modal-wrapper {
+  h1 {
+    font-size: 20px;
+  }
+}
