--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #560dc0; }
+  background: #e64080; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #2b3221; }
+  background: #f9c682; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #f94e27; }
+  background: #4f7d5b; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #0bf3b6; }
+  background: #2302e0; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #c2923f; }
+  background: #23462c; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #1b2012; }
+  background: #0610a3; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #59a301; }
+  background: #4767ed; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #ebf94c; }
+  background: #b737da; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #ed49bc; }
+  background: #89deeb; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #575c84; }
+  background: #34c0fb; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #c28518; }
+  background: #ee8847; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #062990; }
+  background: #62e16a; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #4775ff; }
+  background: #05b4d6; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #8b91a8; }
+  background: #b5083c; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #2b1570; }
+  background: #68e4ac; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #caded6; }
+  background: #64dacf; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #5fb7c5; }
+  background: #8263e1; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #7c1e42; }
+  background: #11c648; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #0a7706; }
+  background: #98b11e; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #7e175b; }
+  background: #0bc22e; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #e1cfac; }
+  background: #18321e; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #aa596b; }
+  background: #d39d4f; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #3851cf; }
+  background: #276c72; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #970bca; }
+  background: #3155f5; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #19be08; }
+  background: #71cd53; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #e1551a; }
+  background: #469d16; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #2297dd; }
+  background: #a1f4da; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #d068d6; }
+  background: #57c671; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #01f5d3; }
+  background: #d5978f; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #baed0d; }
+  background: #3c885c; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #8bc8fd; }
+  background: #c6e517; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #2ac7aa; }
+  background: #e4a70e; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #d1b956; }
+  background: #bace73; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #994745; }
+  background: #810416; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #0aeb04; }
+  background: #fc87ea; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ed8413; }
+  background: #bc0960; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #a10408; }
+  background: #5f0c76; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #03edae; }
+  background: #b9b1e3; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #7afaef; }
+  background: #cb5f99; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #bd3f6c; }
+  background: #d9db0b; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #e3f61c; }
+  background: #af2e10; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #0aacbd; }
+  background: #d8c024; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #705a79; }
+  background: #4b144b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #62c07b; }
+  background: #e4b3bb; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #9a2d20; }
+  background: #5f6c44; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #bd8fb7; }
+  background: #f43506; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #379294; }
+  background: #795001; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #7b713a; }
+  background: #20a084; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #e00510; }
+  background: #c93e36; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #36d297; }
+  background: #51e80d; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #2c5201; }
+  background: #e628b7; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #6b35d2; }
+  background: #51fff5; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #1aecbb; }
+  background: #8ae769; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #8007cd; }
+  background: #ea93b3; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #615d94; }
+  background: #71a9cc; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #c527a2; }
+  background: #a86f1b; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #dddf4f; }
+  background: #f13ebc; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #b29848; }
+  background: #eef73a; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #b45943; }
+  background: #232f77; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #ac96f2; }
+  background: #a5df88; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #84f463; }
+  background: #3dd5df; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #a0f9e9; }
+  background: #d09d3e; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #701b10; }
+  background: #34abfd; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #dfff3e; }
+  background: #c92ab5; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #1adda5; }
+  background: #5c16eb; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #ac4fae; }
+  background: #1e1e82; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #570787; }
+  background: #d34a39; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #248edd; }
+  background: #e34f7e; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #ee8fa7; }
+  background: #078b77; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #b854e3; }
+  background: #84ee6d; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #d0edca; }
+  background: #0230b9; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #737742; }
+  background: #5d2334; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #551ffc; }
+  background: #3d61a5; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #e7f19c; }
+  background: #884afd; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #028c80; }
+  background: #f7288c; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #648017; }
+  background: #970a49; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #7e3ac6; }
+  background: #b8c9a0; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #f2748b; }
+  background: #82cebe; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #eb9f57; }
+  background: #3d52b7; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #8f1371; }
+  background: #9e7359; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #50e43a; }
+  background: #bb5e04; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #61a7fa; }
+  background: #888c6f; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #1c160c; }
+  background: #d9507a; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #535877; }
+  background: #1a70b6; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #817a5d; }
+  background: #b90a7b; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #f2f4dc; }
+  background: #7ec55d; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #014fe3; }
+  background: #b70a8a; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #0f08d2; }
+  background: #63edb4; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #340a72; }
+  background: #2a1fc1; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #79ef99; }
+  background: #ba85a0; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #e8dec6; }
+  background: #76bc50; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #397182; }
+  background: #052a4c; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #ec6a83; }
+  background: #26f0a8; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #3ddfe6; }
+  background: #2aad63; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #539836; }
+  background: #0b8692; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #1c6cd8; }
+  background: #4244b6; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #819fb1; }
+  background: #4a100f; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #4f61c9; }
+  background: #1a9134; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #3adabb; }
+  background: #ee0d1a; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #e677d5; }
+  background: #19b441; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16856,6 +16856,20 @@ input:not(:checked) + .slider-switch > .switch-non {
 /*waring modal css*/
 .waring-modal-wrapper h1 {
   font-size: 20px; }
+
+/*user Dp name css*/
+.userDPname-div {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background: #6367DE;
+  color: #fff;
+  font-size: 50px;
+  display: grid;
+  align-items: center; }
+
+.userDPname-div .userEdit-icon {
+  font-size: initial; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
