--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -4989,3 +4989,18 @@ height: 300px;
     font-size: 20px;
   }
 }
+/*user Dp name css*/
+.userDPname-div {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background: #6367DE;
+  color: #fff;
+  font-size: 50px;
+  display: grid;
+  align-items: center;
+  
+}
+.userDPname-div .userEdit-icon {
+  font-size: initial;
+}
