--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #e64080; }
+  background: #489b4a; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #f9c682; }
+  background: #68ba56; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #4f7d5b; }
+  background: #94e7a1; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #2302e0; }
+  background: #b5f967; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #23462c; }
+  background: #9390bf; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #0610a3; }
+  background: #16b51e; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #4767ed; }
+  background: #898fd1; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #b737da; }
+  background: #315cf3; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #89deeb; }
+  background: #68282b; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #34c0fb; }
+  background: #d17d49; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #ee8847; }
+  background: #23182c; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #62e16a; }
+  background: #efc4a5; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #05b4d6; }
+  background: #425834; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #b5083c; }
+  background: #8e78cc; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #68e4ac; }
+  background: #e7438b; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #64dacf; }
+  background: #b543bd; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #8263e1; }
+  background: #9e510c; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #11c648; }
+  background: #402e2f; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #98b11e; }
+  background: #cc2d7d; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #0bc22e; }
+  background: #48da89; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #18321e; }
+  background: #088715; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #d39d4f; }
+  background: #ddbd47; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #276c72; }
+  background: #21d6d8; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #3155f5; }
+  background: #e434bc; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #71cd53; }
+  background: #39408f; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #469d16; }
+  background: #f17362; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #a1f4da; }
+  background: #3edfcd; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #57c671; }
+  background: #6872af; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #d5978f; }
+  background: #2d8f3d; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #3c885c; }
+  background: #5b24c1; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #c6e517; }
+  background: #fa15dd; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #e4a70e; }
+  background: #45a51f; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #bace73; }
+  background: #ad61c0; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #810416; }
+  background: #2bdebf; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #fc87ea; }
+  background: #3671d5; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #bc0960; }
+  background: #46ea63; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #5f0c76; }
+  background: #01ce68; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #b9b1e3; }
+  background: #583eea; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #cb5f99; }
+  background: #053edf; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #d9db0b; }
+  background: #d387ba; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #af2e10; }
+  background: #ee04dd; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #d8c024; }
+  background: #78f2ee; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #4b144b; }
+  background: #0f8111; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #e4b3bb; }
+  background: #c07a0b; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #5f6c44; }
+  background: #db4831; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #f43506; }
+  background: #28dee4; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #795001; }
+  background: #15bcb0; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #20a084; }
+  background: #71ce8f; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #c93e36; }
+  background: #bc6a70; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #51e80d; }
+  background: #6fc776; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #e628b7; }
+  background: #809d7e; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #51fff5; }
+  background: #96b0ce; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #8ae769; }
+  background: #29687f; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #ea93b3; }
+  background: #049e0b; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #71a9cc; }
+  background: #d1ab33; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #a86f1b; }
+  background: #07f82f; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #f13ebc; }
+  background: #6cd24f; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #eef73a; }
+  background: #d0216a; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #232f77; }
+  background: #a04cff; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #a5df88; }
+  background: #d56ed0; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #3dd5df; }
+  background: #670d76; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #d09d3e; }
+  background: #fe55f1; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #34abfd; }
+  background: #6fbc49; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #c92ab5; }
+  background: #f42ac5; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #5c16eb; }
+  background: #4ad633; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #1e1e82; }
+  background: #892317; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #d34a39; }
+  background: #1d02f7; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #e34f7e; }
+  background: #3e878e; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #078b77; }
+  background: #01f6c7; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #84ee6d; }
+  background: #090ac4; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #0230b9; }
+  background: #3458db; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #5d2334; }
+  background: #0a8418; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #3d61a5; }
+  background: #9d5b82; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #884afd; }
+  background: #e07a79; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #f7288c; }
+  background: #6a9b19; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #970a49; }
+  background: #b4bcc8; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #b8c9a0; }
+  background: #06cd21; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #82cebe; }
+  background: #1bd9d1; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #3d52b7; }
+  background: #2e241a; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #9e7359; }
+  background: #c7042b; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #bb5e04; }
+  background: #f4bbe0; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #888c6f; }
+  background: #bb5880; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #d9507a; }
+  background: #3b793f; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #1a70b6; }
+  background: #b2b7d4; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #b90a7b; }
+  background: #4eca58; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #7ec55d; }
+  background: #1d57cd; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #b70a8a; }
+  background: #4e2956; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #63edb4; }
+  background: #e4e52e; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #2a1fc1; }
+  background: #8ac9ae; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #ba85a0; }
+  background: #1ef201; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #76bc50; }
+  background: #ec5f7e; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #052a4c; }
+  background: #0f29b1; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #26f0a8; }
+  background: #70a7fe; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #2aad63; }
+  background: #bfee0f; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #0b8692; }
+  background: #6ac802; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #4244b6; }
+  background: #f8064c; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #4a100f; }
+  background: #8e886e; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #1a9134; }
+  background: #f11856; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #ee0d1a; }
+  background: #e1c162; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #19b441; }
+  background: #c3a939; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16870,6 +16870,16 @@ input:not(:checked) + .slider-switch > .switch-non {
 
 .userDPname-div .userEdit-icon {
   font-size: initial; }
+
+/*corss btn css*/
+.list-view-hover-cross-btn {
+  display: flex;
+  justify-content: flex-end; }
+
+.list-view-hover-cross-btn .close {
+  position: inherit;
+  top: inherit;
+  right: inherit; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
